--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
+    "uuidv4": "^6.2.1",
     "yup": "^0.29.2"
   },
   "scripts": {
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.1",
     "@types/yup": "^0.29.3"
   }
