--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
+    "@testing-library/react-hooks": "^3.4.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
@@ -62,6 +63,8 @@
     "@types/axios": "^0.14.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.1",
-    "@types/yup": "^0.29.3"
+    "@types/yup": "^0.29.3",
+    "axios-mock-adapter": "^1.18.2",
+    "react-test-renderer": "^16.13.1"
   }
 }
